--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -15,7 +15,7 @@
       <mat-card-content> {{post.skills}} </mat-card-content>
       <mat-card-content> {{post.jobDescription}} </mat-card-content>
       <mat-card-actions>
-        <button mat-button (click)="openForm()">More Info</button>
+        <button mat-button (click)="openForm(post.id)">More Info</button>
       </mat-card-actions>
     </mat-card>
   </div>
