--- a/src/app/business-profile/business-profile.component.html
+++ b/src/app/business-profile/business-profile.component.html
@@ -1,11 +1,10 @@
 <app-navbar></app-navbar>
 <div class="bizHeader">
-  <p class="bizName">{{ profile?.name }}</p>
-  <p>{{ profile?.phoneNumber }}</p>
-  <p>{{ profile?.location }}</p>
-  <p>{{ profile?.profilePicture }}</p>
-  <p>{{ profile?.website }}</p>
-  <p>{{ profile?.about }}</p>
+  <h1 class="bizName">{{ profile?.name }}</h1>
+  <h4 class="bizInfo">{{ profile?.phoneNumber }}</h4>
+  <h4 class="bizInfo">{{ profile?.location }}</h4>
+  <h4 class="bizInfo">{{ profile?.website }}</h4>
+  <h4 class="bizInfo">{{ profile?.about }}</h4>
   <button mat-button (click)="openForm()">Update</button>
 </div>
 
@@ -17,8 +16,9 @@
       <mat-card-content> {{post.skills}} </mat-card-content>
       <mat-card-content> {{post.jobDescription}} </mat-card-content>
       <mat-card-actions>
-        <button mat-button (click)="openForm()">Update Post</button>   <!-- Needs -->
+        <button mat-button (click)="openForm()">More Info</button>
+        <button mat-button (click)="openForm()">Update Post</button>
         <button mat-button (click)="openForm()">Delete Post</button>
       </mat-card-actions>
     </mat-card>
-  </div>
+</div>
