--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -25,6 +25,7 @@
           <button class="button" type="submit" [disabled]="typeOfAccount !== 'freelance' && typeOfAccount !== 'business' ">Login</button>
           <label class="signUp">Don't have an account?</label>
           <button class="signUp" id="signUpButton" mat-button (click)="openForm()">Sign Up!</button>
+          <button class="admin" id="adminButton" mat-button (click)="adminRedirect()">Admin Sign In</button>
         </div>
       </form>
     </div>
