created admin signin

--- a/src/app/admin-login/admin-login.component.html
+++ b/src/app/admin-login/admin-login.component.html
@@ -1,20 +1,12 @@
 <app-navbar></app-navbar>
-<div id="content">
-  <form class="formContainer" [formGroup]="adminForm" (ngSubmit)="onSubmit()">
-    <mat-form-field>
-      <input matInput placeholder="Enter your username" [formControl]"admin" name="name" type="text" required>
-    </mat-form-field>
-    <mat-form-field>
-      <input matInput placeholder="Enter your password" name="password" type="password" >
-      <mat-error *ngIf="name.invalid">{{getErrorMessage()}}</mat-error>
-    </mat-form-field>
+
+<form [formGroup]="adminForm">
   
-  
-    <div *ngIf="name.errors.required">
-      Name is required.
-    </div>
-    <div *ngIf="name.errors.minlength">
-      Name must be at least 6 characters long.
-    </div>
-  </form>
-</div>
+    <mat-form-field>
+        <input matInput placeholder="email" formControlName="email" autocomplete="off">
+        <mat-error *ngIf="email.invalid && email.touched" class="has-text-danger">
+            Your email does not look right 🤔
+        </mat-error>
+    </mat-form-field>
+
+</form>
