--- a/src/app/business-profile/business-profile.component.html
+++ b/src/app/business-profile/business-profile.component.html
@@ -8,6 +8,10 @@
   <button mat-button (click)="openForm()">Update</button>
 </div>
 
+<div>
+  <button (click)="createPostDialog()">Create Post</button>
+</div>
+
 <div *ngFor="let post of posts" id="card">
     <mat-card>
       <mat-card-title>{{ post.jobTitle }}</mat-card-title>
