--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
       <a class="AboutUs" href="http://localhost:4200/landing#aboutSect">ABOUT US</a>
       <a class="Jobs" routerLink="/posts">JOBS</a>
       <a class="Account" (click)="handleAccount()">ACCOUNT</a>
-      <!-- <a (click)="logout()" *ngIf="isLoggedIn">Logout</a> -->
+      <a (click)="logout()" *ngIf="isLoggedIn">Logout</a>
     </ul>
     
   </nav>
