--- a/src/app/create-post/create-post.component.html
+++ b/src/app/create-post/create-post.component.html
@@ -24,6 +24,6 @@
   </mat-dialog-content>
   <mat-dialog-actions>
     <button class="buttons" mat-button type="button" mat-dialog-close>Cancel</button>
-    <button class="buttons" mat-button cdkFocusInitial type="submit">Sign Up</button>
+    <button class="buttons" mat-button cdkFocusInitial type="submit">Create</button>
   </mat-dialog-actions>
 </form>
