--- a/src/app/create-post/create-post.component.html
+++ b/src/app/create-post/create-post.component.html
@@ -3,7 +3,7 @@
   <mat-dialog-content>
     <div>
       <mat-form-field>
-        <input matInput class="inputs" placeholder="Name" formControlName="name" required>
+        <input matInput class="inputs" placeholder="Name" formControlName="name" readonly>
       </mat-form-field>
       <mat-form-field>
         <input matInput class="inputs" placeholder="Job Title" formControlName="jobTitle" required>
