--- a/src/app/admin-login/admin-login.component.html
+++ b/src/app/admin-login/admin-login.component.html
@@ -1,12 +1,18 @@
 <app-navbar></app-navbar>
 
-<form [formGroup]="adminForm">
+<form [formGroup]="adminForm" [hidden]="success" (ngSubmit)="submitHandler()">
   
+    <hr>
+
     <mat-form-field>
-        <input matInput placeholder="email" formControlName="email" autocomplete="off">
-        <mat-error *ngIf="email.invalid && email.touched" class="has-text-danger">
-            Your email does not look right 🤔
-        </mat-error>
+        <input matInput placeholder="email" formControlName="email">
     </mat-form-field>
+
+    <mat-form-field>
+        <input matInput placeholder="password" formControlName="password">
+    </mat-form-field>
+
+
+    <button mat-button color="primary" type="submit" [disabled]="adminForm.invalid">Submit Form</button>
 
 </form>
