--- a/src/app/business-profile/business-profile.component.html
+++ b/src/app/business-profile/business-profile.component.html
@@ -20,9 +20,9 @@
       <mat-card-content> {{post.skills}} </mat-card-content>
       <mat-card-content> {{post.jobDescription}} </mat-card-content>
       <mat-card-actions>
-        <button mat-button (click)="openForm()">More Info</button>
-        <button mat-button (click)="openForm()">Update Post</button>
-        <button mat-button (click)="openForm()">Delete Post</button>
+        <button mat-button (click)="moreInfoDialog(post.id)">More Info</button>
+        <button mat-button (click)="postUpdateDialog(post)">Update Post</button>
+        <button mat-button (click)="postDelete(post.id)">Delete Post</button>
       </mat-card-actions>
     </mat-card>
 </div>
