--- a/src/app/business-profile/business-profile.component.html
+++ b/src/app/business-profile/business-profile.component.html
@@ -1,28 +1,30 @@
 <app-navbar></app-navbar>
-<div class="bizHeader"> {{ profile?.name }}</div>
+  <div class="bizHeader">Welcome, {{ profile?.name }}</div>
 
-  <!-- <h1 class="bizName">{{ profile?.name }}</h1>
-  <h4 class="bizInfo">{{ profile?.phoneNumber }}</h4>
-  <h4 class="bizInfo">{{ profile?.location }}</h4>
-  <h4 class="bizInfo">{{ profile?.website }}</h4>
-  <h4 class="bizInfo">{{ profile?.about }}</h4>
-  <button mat-button (click)="openForm()">Update</button> -->
+  <mat-list class="infoList">
+      <mat-list-item>{{profile?.phoneNumber}}</mat-list-item>
+      <mat-divider></mat-divider>
+      <mat-list-item> {{ profile?.location }} </mat-list-item>
+      <mat-divider></mat-divider>
+      <mat-list-item> {{ profile?.website }} </mat-list-item>
+      <mat-divider></mat-divider>
+      <button mat-button (click)="openForm()">Update Account</button>
+      <mat-divider></mat-divider>
+      <button mat-button (click)="createPostDialog()">Create Post</button>
+    </mat-list>
 
-<div>
-  <button (click)="createPostDialog()">Create Post</button>
-</div>
-<hr />
+<!-- <hr /> -->
 <div *ngFor="let post of posts" id="card">
-    <mat-card>
-      <mat-card-title>{{ post.jobTitle }}</mat-card-title>
-      <mat-card-subtitle> {{ post.name }} </mat-card-subtitle>
-      <mat-card-subtitle> {{ post.location }} </mat-card-subtitle>
-      <mat-card-content> {{post.skills}} </mat-card-content>
-      <mat-card-content> {{post.jobDescription}} </mat-card-content>
-      <mat-card-actions>
-        <button mat-button (click)="openForm()">More Info</button>
-        <button mat-button (click)="openForm()">Update Post</button>
-        <button mat-button (click)="openForm()">Delete Post</button>
-      </mat-card-actions>
-    </mat-card>
+  <mat-card>
+    <mat-card-title>{{ post.jobTitle }}</mat-card-title>
+    <mat-card-subtitle> {{ post.name }} </mat-card-subtitle>
+    <mat-card-subtitle> {{ post.location }} </mat-card-subtitle>
+    <mat-card-content> {{post.skills}} </mat-card-content>
+    <mat-card-content> {{post.jobDescription}} </mat-card-content>
+    <mat-card-actions>
+      <button mat-button (click)="openForm()">More Info</button>
+      <button mat-button (click)="openForm()">Update Post</button>
+      <button mat-button (click)="openForm()">Delete Post</button>
+    </mat-card-actions>
+  </mat-card>
 </div>
