--- a/src/app/update-post/update-post.component.html
+++ b/src/app/update-post/update-post.component.html
@@ -15,8 +15,10 @@
         <input matInput class="inputs" placeholder="Pay Range" formControlName="payRange" required>
       </mat-form-field>
       <mat-form-field>
-        <input matInput class="inputs" placeholder="Skills" formControlName="skills" required>
-      </mat-form-field>
+          <mat-select class="inputBox" placeholder="Skills" formControlName="skills" multiple>
+            <mat-option *ngFor="let skill of skills" [value]="skill">{{ skill }}</mat-option>
+          </mat-select>
+        </mat-form-field>
       <mat-form-field>
         <input matInput class="inputs" placeholder="Job Description" formControlName="jobDescription" required>
       </mat-form-field>
