--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,8 +1,12 @@
 <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 <app-navbar></app-navbar>
 <div class="landing">
+<div class="buttons">
   <button class="button1" mat-button routerLink="/posts">SEE JOBS</button>
   <button class="button2" mat-button (click)="openForm()">CREATE AN ACCOUNT</button>
+  <!-- <button class="buttons" mat-button routerLink="/posts">SEE JOBS</button>
+  <button class="buttons" mat-button (click)="openForm()">CREATE AN ACCOUNT</button> -->
+</div>
 </div>
 <div class="testimony">
   <p class="quote">"Nexus is a Game Changer! We were able to find the developer we needed to reach the next level"
