--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -6,11 +6,10 @@
     <mat-divider></mat-divider>
     <mat-list-item> {{ profile?.email }} </mat-list-item>
     <mat-divider></mat-divider>
-    <mat-list-item> {{ profile?.website }} </mat-list-item>
+    <mat-list-item> {{ profile?.location }} </mat-list-item>
     <mat-divider></mat-divider>
     <button mat-button (click)="openForm()">Update Account</button>
-    <mat-divider></mat-divider>
-    <button mat-button (click)="createPostDialog()">Create Post</button>
+
   </mat-list>
 
 <!-- <hr /> -->
