--- a/src/app/admin-login/admin-login.component.html
+++ b/src/app/admin-login/admin-login.component.html
@@ -1,10 +1,34 @@
 <app-navbar></app-navbar>
-
-<form [formGroup]="admminForm" (ngSubmit)="onSubmit()">
-      <mat-form-field>
-        <input matInput  name="name" placeholder="Username or Email" formControlName="name" required>
-      </mat-form-field>
-      <mat-form-field>
-        <input matInput name="password" placeholder="Password" formControlName="password" required>
-      </mat-form-field>
-</form>
+<div *ngFor="let post of posts" id="card">
+    <mat-card>
+      <mat-card-title>{{ post.jobTitle }}</mat-card-title>
+      <mat-card-subtitle> {{ post.name }} </mat-card-subtitle>
+      <mat-card-subtitle> {{ post.location }} </mat-card-subtitle>
+      <mat-card-content> {{post.skills}} </mat-card-content>
+      <mat-card-content> {{post.jobDescription}} </mat-card-content>
+      <mat-card-actions>
+        <button mat-button (click)="postUpdateDialog(post)">Update Post</button>
+        <button mat-button (click)="postDelete(post.id)">Delete Post</button>
+      </mat-card-actions>
+    </mat-card>
+</div>
+<div *ngFor="let employee of employees" id="card">
+    <mat-card>
+      <mat-card-title>{{ employee.name }}</mat-card-title>
+      <mat-card-subtitle> {{ employee.email }} </mat-card-subtitle>
+      <mat-card-subtitle> {{ employee.phoneNumber }} </mat-card-subtitle>
+      <mat-card-subtitle> {{ employee.location }} </mat-card-subtitle>
+      <mat-card-subtitle> {{ employee.linkdin }} </mat-card-subtitle>
+      <mat-card-content> {{employee.skills}} </mat-card-content>
+      <mat-card-content> {{employee.about}} </mat-card-content>
+      <mat-card-content> {{employee.faceBook}} </mat-card-content>
+      <mat-card-content> {{employee.instagram}} </mat-card-content>
+      <mat-card-content> {{employee.twitter}} </mat-card-content>
+      <mat-card-content> {{employee.profilePicture}} </mat-card-content>
+      <mat-card-content> {{employee.jobDescription}} </mat-card-content>
+      <mat-card-actions>
+        <button mat-button (click)="postUpdateDialog(post)">Update Post</button>
+        <button mat-button (click)="postDelete(post.id)">Delete Post</button>
+      </mat-card-actions>
+    </mat-card>
+</div>
