--- a/src/app/account-update/account-update.component.html
+++ b/src/app/account-update/account-update.component.html
@@ -47,7 +47,7 @@
   </mat-dialog-content>
   <mat-dialog-actions>
     <button class="buttons" mat-button type="button" mat-dialog-close>Cancel</button>
-    <button class="buttons" mat-button cdkFocusInitial type="submit">Sign Up</button>
+    <button class="buttons" mat-button cdkFocusInitial type="submit">Update</button>
   </mat-dialog-actions>
 </form>
 <form [formGroup]="BusinessUpdateForm" *ngIf="typeOfAccount === 'business' " (ngSubmit)="submit(BusinessUpdateForm)">
