--- a/src/app/business-profile/business-profile.component.html
+++ b/src/app/business-profile/business-profile.component.html
@@ -16,11 +16,11 @@
 <!-- <hr /> -->
 <div *ngFor="let post of posts" id="card">
     <mat-card>
-      <mat-card-title>{{ post.jobTitle }}</mat-card-title>
-      <mat-card-subtitle> {{ post.name }} </mat-card-subtitle>
-      <mat-card-subtitle> {{ post.location }} </mat-card-subtitle>
-      <mat-card-content> {{post.skills}} </mat-card-content>
-      <mat-card-content> {{post.jobDescription}} </mat-card-content>
+      <mat-card-title>{{ post?.jobTitle }}</mat-card-title>
+      <mat-card-subtitle> {{ post?.name }} </mat-card-subtitle>
+      <mat-card-subtitle> {{ post?.location }} </mat-card-subtitle>
+      <mat-card-content> {{post?.skills}} </mat-card-content>
+      <mat-card-content> {{post?.jobDescription}} </mat-card-content>
       <mat-card-actions>
         <button mat-button (click)="moreInfoDialog(post.id)">More Info</button>
         <button mat-button (click)="postUpdateDialog(post)">Update Post</button>
