--- a/src/app/create-post/create-post.component.html
+++ b/src/app/create-post/create-post.component.html
@@ -15,7 +15,7 @@
         <input matInput class="inputs" placeholder="Pay Range" formControlName="payRange" required>
       </mat-form-field>
       <mat-form-field>
-          <mat-select class="inputBox" placeholder="Skills" formControlName="skills" multiple>
+          <mat-select class="inputBox" placeholder="Skills" formControlName="skills">
             <mat-option *ngFor="let skill of skills" [value]="skill">{{ skill }}</mat-option>
           </mat-select>
         </mat-form-field>
