--- a/src/app/update-post/update-post.component.html
+++ b/src/app/update-post/update-post.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Create a Job Post</h2>
+<h2 mat-dialog-title>Update Job Post</h2>
 <form [formGroup]="UpdatePostForm" (ngSubmit)="submit(UpdatePostForm)">
   <mat-dialog-content>
     <div>
@@ -15,7 +15,7 @@
         <input matInput class="inputs" placeholder="Pay Range" formControlName="payRange" required>
       </mat-form-field>
       <mat-form-field>
-          <mat-select class="inputBox" placeholder="Skills" formControlName="skills" multiple>
+          <mat-select class="inputBox" placeholder="Skills" formControlName="skills">
             <mat-option *ngFor="let skill of skills" [value]="skill">{{ skill }}</mat-option>
           </mat-select>
         </mat-form-field>
