--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
       <a routerLink="/landing">HOME</a>
     </li>
     <li>
-      <a href="http://localhost:4200/landing#aboutSect">ABOUT US</a>
+      <a href="https://nexus-client.herokuapp.com/landing#aboutSect">ABOUT US</a>
     </li>
     <li>
       <a routerLink="/posts">JOBS</a>
