--- a/src/app/admin-login/admin-login.component.css
+++ b/src/app/admin-login/admin-login.component.css
@@ -1,14 +1,3 @@
-.column {
-  float: left;
-  width: 25%;
-
-}
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
 h1{
   text-align: center;
   font-size: 4em;
@@ -29,7 +18,7 @@ mat-card{
   border-radius: 1.5em;
   -webkit-box-shadow: 0 10px 30px rgba(0, 0, 0, 0.8);
           box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-  width: auto;
+  width: 60%;
 }
 
 .sectTitle{
@@ -38,13 +27,9 @@ mat-card{
   color: black;
 }
 
-.column {
-  float: left;
-  width: 25%;
-
-}
-.row{
-  content: "";
-  display: table;
-  clear: both;
+.infoList{
+  width: 15vw;
+  height: 100vh;
+  position: absolute;
+  background-color: #e2e2e2;
 }
