--- a/src/app/admin-login/admin-login.component.html
+++ b/src/app/admin-login/admin-login.component.html
@@ -1,12 +1,12 @@
 <app-navbar></app-navbar>
 
 <mat-list class="infoList">
-    <mat-list-item>{{profile?.phoneNumber}}</mat-list-item>
+    <!-- <mat-list-item>{{profile?.phoneNumber}}</mat-list-item>
     <mat-divider></mat-divider>
     <mat-list-item> {{ profile?.location }} </mat-list-item>
     <mat-divider></mat-divider>
     <mat-list-item> {{ profile?.website }} </mat-list-item>
-    <mat-divider></mat-divider>
+    <mat-divider></mat-divider> -->
     <a href="https://nexus-client.herokuapp.com/admin#jobPosts">Manage Job Listings</a>
     <mat-divider></mat-divider>
     <a href="https://nexus-client.herokuapp.com/admin#freelanceAcct">Manage Freelance Accounts</a>
