--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -32,9 +32,9 @@
 
 
 
-<footer class="footer">
+<!-- <footer class="footer">
   <h6>Nexus Connect | Nic, Donovan, George | 1150 Academy</h6>
-</footer>
+</footer> -->
 
 
 
