--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -66,6 +66,7 @@
 .buttons{
     position: static;
     display: inline-block;
+    font-family: 'Poppins' sans-serif;
 }
 
 .button1{
@@ -148,9 +149,10 @@
 .footer{
     width: 100vw;
     background-color: rgba(255, 255, 255, 1.0);
-    height: 1vh;
+    height: 3vh;
     text-align: center;
     font-family: 'Poppins', sans-serif;
+    /* position: relative; */
     
 }
 
